Add support appAgents.completeDestroyAppAgent
